# qbit-orphanage

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/qbit_arr/: __init__.py  __main__.py  config.py
src/qbit_arr/api/: __init__.py  qbit_client.py  radarr_client.py  sonarr_client.py
src/qbit_arr/cli/: __init__.py  commands.py  formatters.py
src/qbit_arr/core/: __init__.py  hardlink.py  models.py  scanner.py
src/qbit_arr/web/: __init__.py  app.py
src/qbit_arr/web/static/: index.html
